--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,12 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+
+.cls-1 {
+  fill: #000;
+}
+
+.cls-2 {
+  fill: #77acf1;
+}
